--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>Naveen Durvasula</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,6 +59,9 @@
         <!-- /.container -->
     </nav>
 
+    <div id="con">
+
+    </div>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -73,15 +76,21 @@
     <!-- inView.js -->
     <script src="js/inview.min.js"></script>
 
+    <!-- Image scripts -->
+    <script src="js/StackBlur.js"></script>
+    <script src="js/BGImage.js"></script>
+
     <!-- Web Content -->
     <script src="js/content.js"></script>
 
+
+    <!-- Background change feature-->
     <script>
-        inView('section').on('enter', function (el) {
-            var color = $(el).attr('data-background-color');
-            $('section').fadeOut(100, function () {
-                $('section').css('background-color', color);
-            }).fadeIn(400);
+        inView('.post').on('enter', function (el) {
+            var id = $(el).attr('data-bg');
+            $("#con img").removeClass("opaque");
+
+            document.getElementById(id).className = "opaque";
         });
     </script>
 
